src/types/tests/snapshots/tgbot__types__tests__giveaway__giveaway-2.snap
---
source: src/types/tests/giveaway.rs
expression: "expected_struct.with_country_codes([\"FR\", \"GE\", \"RU\",\n\"SK\"]).with_has_public_winners(true).with_only_new_members(true).with_premium_subscription_month_count(1).with_prize_description(\"test\").with_prize_star_count(2)"
---
{
  "chats": [
    {
      "type": "channel",
      "id": 1,
      "title": "test"
    }
  ],
  "winners_selection_date": 0,
  "winner_count": 1,
  "country_codes": [
    "FR",
    "GE",
    "RU",
    "SK"
  ],
  "has_public_winners": true,
  "only_new_members": true,
  "premium_subscription_month_count": 1,
  "prize_description": "test",
  "prize_star_count": 2
}
