src/types/tests/snapshots/tgbot__types__tests__giveaway__giveaway_completed.snap
---
source: src/types/tests/giveaway.rs
expression: expected_struct.clone()
---
{
  "winner_count": 1
}
