src/types/tests/snapshots/tgbot__types__tests__giveaway__giveaway_created-2.snap
---
source: src/types/tests/giveaway.rs
expression: expected_struct.clone()
---
{
  "prize_star_count": 1
}
