src/types/tests/snapshots/tgbot__types__tests__giveaway__giveaway_winners-2.snap
---
source: src/types/tests/giveaway.rs
expression: "expected_struct.with_additional_chat_count(1).with_only_new_members(true).with_premium_subscription_month_count(2).with_prize_description(\"test\").with_prize_star_count(3).with_unclaimed_prize_count(1).with_was_refunded(false)"
---
{
  "chat": {
    "type": "channel",
    "id": 1,
    "title": "test"
  },
  "giveaway_message_id": 1,
  "winner_count": 1,
  "winners": [
    {
      "first_name": "test",
      "id": 1,
      "is_bot": false
    }
  ],
  "winners_selection_date": 0,
  "additional_chat_count": 1,
  "only_new_members": true,
  "premium_subscription_month_count": 2,
  "prize_description": "test",
  "prize_star_count": 3,
  "unclaimed_prize_count": 1,
  "was_refunded": false
}
